--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,23 @@
     <groupId>com.talgreen</groupId>
     <artifactId>javaUnitTest</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.11.1</version>
+            <scope>test</scope>
+        </dependency>
+
+
+    </dependencies>
 
 
 </project>
