--- a/javaUnitTest-examples/pom.xml
+++ b/javaUnitTest-examples/pom.xml
@@ -41,13 +41,14 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
+            <artifactId>slf4j-nop</artifactId>
             <version>1.7.25</version>
             <scope>test</scope>
         </dependency>
+
 
 
     </dependencies>
