--- a/2-Exercises/pom.xml
+++ b/2-Exercises/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>javaUnitTest-Exercises</artifactId>
+    <artifactId>2-Exercises</artifactId>
     <build>
         <plugins>
             <plugin>
