--- a/3-Answers/pom.xml
+++ b/3-Answers/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>3-Answers</artifactId>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
 </project>
